# recommendation-system

./: README.md  pyproject.toml
src/recommendation_system/: __main__.py  app.py
